# Christmas-wish-list

./: CMakeLists.txt  Readme.md  budget.cpp  budget.h  file_handler.cpp  file_handler.h  logger.cpp  logger.h  main.cpp  utils.cpp  utils.h  wishlist  wishlist.cpp  wishlist.h  wishlist_manager.cpp  wishlist_manager.h
.github/workflows/: tests.yml
include/: database_handler.h  wishlist.h  wishlist_manager.h
src/: budget.cpp  database_handler.cpp  file_handler.cpp  logger.cpp  main.cpp  utils.cpp  wishlist.cpp  wishlist_manager.cpp
tests/: test_file_handler.cpp  test_helper.cpp  test_integration.cpp  test_main.cpp  test_wishitem.cpp  test_wishlist_manager.cpp
